--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -292,7 +292,6 @@ allow 185.177.238.9;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
-allow 185.191.239.158;
 allow 185.191.239.49;
 allow 185.193.52.180;
 allow 185.195.71.244;
@@ -581,6 +580,7 @@ allow 194.26.192.77;
 allow 194.42.196.42;
 allow 194.53.137.156;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -883,6 +883,7 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -962,6 +963,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1510,6 +1512,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
