--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -916,6 +916,7 @@ allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1507,6 +1508,7 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
+allow 2a10:1fc0:9::26fb:48a1;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1729,6 +1731,7 @@ allow 45.95.233.104;
 allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.246.96.48;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.29.238.25;
