--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -807,6 +807,7 @@ allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -958,6 +959,7 @@ allow 45.95.233.104;
 allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.246.96.48;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.29.238.25;
