--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -916,6 +916,7 @@ deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
+deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -1507,6 +1508,7 @@ deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
+deny 2a10:1fc0:9::26fb:48a1;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1729,6 +1731,7 @@ deny 45.95.233.104;
 deny 46.165.243.36;
 deny 46.232.251.191;
 deny 46.234.47.105;
+deny 46.246.96.48;
 deny 46.250.243.29;
 deny 46.253.4.208;
 deny 46.29.238.25;
