--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 102.211.56.20;
 allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
+allow 103.164.54.199;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
@@ -382,7 +383,6 @@ allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
 allow 185.220.101.19;
-allow 185.220.101.190;
 allow 185.220.101.191;
 allow 185.220.101.2;
 allow 185.220.101.20;
@@ -497,7 +497,6 @@ allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.2;
 allow 190.120.229.98;
-allow 190.123.46.170;
 allow 190.211.254.185;
 allow 190.211.254.97;
 allow 192.108.48.150;
@@ -685,6 +684,7 @@ allow 2001:67c:e28:1::100;
 allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
 allow 2001:67c:e28:1::103;
+allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:173;
@@ -882,6 +882,7 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -909,7 +910,6 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -930,6 +930,7 @@ allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 2.56.10.36;
@@ -949,6 +950,7 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -961,6 +963,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1148,7 +1151,6 @@ allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:2:ee01::7583;
 allow 2800:ba0:6:c1::4858;
-allow 2803:200:ffff:ff0c::ae92:2a2f;
 allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
@@ -1225,6 +1227,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1336,7 +1339,6 @@ allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
-allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
 allow 2a0b:f4c2::12;
 allow 2a0b:f4c2::13;
@@ -1613,6 +1615,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1744,6 +1747,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1787,6 +1791,7 @@ allow 64.190.76.10;
 allow 64.190.76.11;
 allow 64.190.76.12;
 allow 64.190.76.13;
+allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
 allow 66.146.193.33;
@@ -1831,6 +1836,7 @@ allow 82.153.138.125;
 allow 82.153.138.184;
 allow 82.153.138.241;
 allow 82.153.138.7;
+allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
