--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -60,6 +60,7 @@ set_real_ip_from 2001:67c:e28:1::100;
 set_real_ip_from 2001:67c:e28:1::101;
 set_real_ip_from 2001:67c:e28:1::102;
 set_real_ip_from 2001:67c:e28:1::103;
+set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:173;
@@ -115,6 +116,7 @@ set_real_ip_from 2400:d320:2261:6860::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
@@ -129,6 +131,7 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -141,6 +144,7 @@ set_real_ip_from 2602:fb54:1400::1d;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -327,7 +331,6 @@ set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:2:ee01::7583;
 set_real_ip_from 2800:ba0:6:c1::4858;
-set_real_ip_from 2803:200:ffff:ff0c::ae92:2a2f;
 set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
@@ -404,6 +407,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -515,7 +519,6 @@ set_real_ip_from 2a0b:f4c2:1::186;
 set_real_ip_from 2a0b:f4c2:1::187;
 set_real_ip_from 2a0b:f4c2:1::188;
 set_real_ip_from 2a0b:f4c2:1::189;
-set_real_ip_from 2a0b:f4c2:1::190;
 set_real_ip_from 2a0b:f4c2:1::191;
 set_real_ip_from 2a0b:f4c2::12;
 set_real_ip_from 2a0b:f4c2::13;
