--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -131,7 +131,6 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -331,6 +330,7 @@ deny 2620:7:6001::120;
 deny 2620:95:4007::111;
 deny 2800:ba0:2:ee01::7583;
 deny 2800:ba0:6:c1::4858;
+deny 2803:200:ffff:ff0c::ae92:2a2f;
 deny 2803:6d90:111::67;
 deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
@@ -439,6 +439,7 @@ deny 2a06:1700:4:14::1;
 deny 2a06:3000::10;
 deny 2a06:3000::40;
 deny 2a06:7e00:406:c400:2c9:b0ff:fe17:5cca;
+deny 2a06:7e00:406:c400:2f2:5ff:fe84:adc7;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:d380:0:103:acab:4c4b:ac4b:1312;
