--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -118,7 +118,6 @@ set_real_ip_from 125.212.241.131;
 set_real_ip_from 125.253.56.119;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
-set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 131.72.79.38;
 set_real_ip_from 136.244.111.163;
@@ -496,6 +495,7 @@ set_real_ip_from 188.68.52.231;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.2;
 set_real_ip_from 190.120.229.98;
+set_real_ip_from 190.123.46.170;
 set_real_ip_from 190.211.254.185;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
@@ -915,7 +915,6 @@ set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -949,7 +948,6 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1150,6 +1148,7 @@ set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:2:ee01::7583;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2803:200:ffff:ff0c::ae92:2a2f;
 set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
@@ -1258,6 +1257,7 @@ set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:7e00:406:c400:2c9:b0ff:fe17:5cca;
+set_real_ip_from 2a06:7e00:406:c400:2f2:5ff:fe84:adc7;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:d380:0:103:acab:4c4b:ac4b:1312;
@@ -1613,7 +1613,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1635,10 +1634,12 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
+set_real_ip_from 45.133.73.14;
 set_real_ip_from 45.133.73.63;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.201.26;
+set_real_ip_from 45.137.201.31;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.137.99.182;
 set_real_ip_from 45.138.16.107;
@@ -1843,6 +1844,7 @@ set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
+set_real_ip_from 84.211.224.201;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.208.139.110;
 set_real_ip_from 85.93.218.204;
